# notebooklm-clone

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .env.example  Dockerfile  Dockerfile.dev  Dockerfile.worker.dev  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chats.py  health.py  notebooks.py  podcasts.py  sources.py  videos.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/models/: __init__.py  chat.py  notebook.py  podcast.py  source.py  user.py  video.py
backend/app/schemas/: auth.py  chat.py  health.py  notebook.py  podcast.py  response.py  source.py  video.py
backend/app/services/: auth_service.py  chat_service.py  embedding_service.py  notebook_service.py  podcast_generator.py  podcast_service.py  source_service.py  video_generator.py  video_service.py
backend/app/services/processors/: __init__.py  base.py  pdf_processor.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 45bef766abf4_create_users_table.py  87e95574d842_create_notebooks_table.py  a1b2c3d4e5f6_enable_pgvector_extension.py  b2c3d4e5f6a7_create_sources_table.py  c3d4e5f6a7b8_create_chats_and_messages_tables.py  c5a710109d24_add_podcasts_table.py  d4e5f6a7b8c9_create_videos_table.py  e5f6a7b8c9d0_add_video_settings_columns.py  f6a7b8c9d0e1_add_video_test_mode_decorate_slides.py
backend/scripts/: inspect_template.py
backend/static/: template.pptx
backend/tests/: conftest.py  test_auth.py  test_health.py  test_notebooks.py  test_sources.py
backend/tests/unit/: conftest.py  test_build_pptx.py
